--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="navbar-header">
 						<!-- Mobile Toggle Menu Button -->
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle visible-xs-block" data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-						<a class="navbar-brand" href="index.html">Clean</a>
+						<a class="navbar-brand" href="index.html">Edit Distance Blog</a>
 						</div>
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
@@ -72,11 +72,35 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Make something you love</h1>
+						<h1 class="intro-lead">Edit Distance Explaination</h1>
+						<p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
+
+You have the following three operations permitted on a word:
+
+Insert a character
+Delete a character
+Replace a character </p>
+
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<div id="fh5co-portfolio">
+			<div class="fh5co-portfolio-item ">
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/ps.png);   background-size: 700px 500px; !important;
+          "></div>
+				<div class="fh5co-portfolio-description">
+					<h2>Problem Statement </h2>
+					<p>Given two strings str1 and str2 and below operations that can performed on str1. Find minimum number of edits (operations) required to convert ‘str1’ into ‘str2’.
+
+Insert
+Remove
+Replace
+All of the above operations are of equal cost.</p>
+					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+				</div>
+			</div>
 
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
@@ -118,13 +142,13 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row">
-							<h2 class="section-lead text-center">Leadership</h2>
+							<h2 class="section-lead text-center">Blog Create by</h2>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+								<img src="images/user.jpg"  class="img-responsive">
 								</figure>
-								<h3>Aditi ___________</h3>
-								<p>B014 </p>
+								<h3>Aditi Dekatey</h3>
+								<p>B015 </p>
 								<ul class="fh5co-social">
 									<li><a href="#"><i class="icon-twitter"></i></a></li>
 									<li><a href="#"><i class="icon-github"></i></a></li>
@@ -132,7 +156,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user_2.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+								<img src="images/user_2.jpg" class="img-responsive">
 								</figure>
 								<h3>Ayush Mundra</h3>
 								<p>B032 </p>
@@ -144,7 +168,7 @@
 							<div class="clearfix visible-sm-block visible-xs-block"></div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user_3.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+								<img src="images/user_3.jpg"  class="img-responsive">
 								</figure>
 								<h3>Jagrit Acharya</h3>
 								<p>B001</p>
@@ -152,11 +176,6 @@
 									<li><a href="#"><i class="icon-twitter"></i></a></li>
 									<li><a href="#"><i class="icon-github"></i></a></li>
 								</ul>
-							</div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								<figure>
-								<img src="images/user.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
-								</figure>
 							</div>
 						</div>
 					</div>
