--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Space Complexity: O(n²).</p>
 					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 				</div>
 			</div>
+
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
 				<div class="fh5co-portfolio-description">
@@ -163,6 +164,10 @@ Space Complexity: O(n²).</p>
 			</div>
 		</div>
 
+		<div class="fh5co-portfolio-description">
+			<h2 style ="text-align: center;">Our Code</h2>
+		</div>
+<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py" type="text/javascript"></script>
 		<div id="fh5co-team">
 			<div class="container">
 				<div class="row">
