--- a/index.html
+++ b/index.html
@@ -67,24 +67,27 @@
 	<!-- END .header -->
 
 
-	<div id="fh5co-main">
+	<!-- <div id="fh5co-main"  > -->
+		<!-- style="background-image: url(images/ed.png); background-size: 800px 400px; !important; background-repeat: no-repeat; background-attachment: fixed; height: 1000px;
+	  background-position: 50% 50%;" -->
 		<div class="fh5co-intro text-center">
-			<div class="container">
+			<div class="container" >
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Edit Distance Explaination</h1>
-						<p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
+					<div class="col-md-8 col-md-offset-2" >
+						<img style="width="500" height="500"" alt="" src="images/ed.png" />
+						<!-- <h1 class="intro-lead">Edit Distance Explaination</h1> -->
+						<!-- <p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
 
 You have the following three operations permitted on a word:
 
 Insert a character
 Delete a character
-Replace a character </p>
+Replace a character </p> -->
 
 					</div>
 				</div>
 			</div>
-		</div>
+		<!-- </div> -->
 
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
