--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Space Complexity: O(n²).</p>
 			</div>
 		</div>
 
-		<div id="fh5co-services">
+		<!-- <div id="fh5co-services">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
@@ -275,7 +275,7 @@ Space Complexity: O(n²).</p>
 			</div>
 		</div>
 
-	</div>
+	</div> -->
 
 	<footer id="fh5co-footer">
 		<div class="container">
