--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ Space Complexity: O(n²).</p>
 						<div class="row">
 							<h2 class="section-lead text-center">Blog Create by</h2>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								<figure>
-								<img src="images/user.jpg"  class="img-responsive">
+								<figure width="500" height="600">
+								<img src="images/aditi.png"  class="img-responsive" width="500" height="600">
 								</figure>
 								<h3>Aditi Dekatey</h3>
 								<p>B015 </p>
@@ -190,7 +190,7 @@ Space Complexity: O(n²).</p>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user_2.jpg" class="img-responsive">
+								<img src="images/ayush.png" class="img-responsive">
 								</figure>
 								<h3>Ayush Mundra</h3>
 								<p>B032 </p>
@@ -202,7 +202,7 @@ Space Complexity: O(n²).</p>
 							<div class="clearfix visible-sm-block visible-xs-block"></div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user_3.jpg"  class="img-responsive">
+								<img src="images/jag.png"  class="img-responsive" height="200">
 								</figure>
 								<h3>Jagrit Acharya</h3>
 								<p>B001</p>
