--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@ Below is implementation of above Naive recursive solution.</p>
 			</div>
 
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/codep.png); background-size: 600px 400px; !important;"></div>
+				<div class="fh5co-portfolio-figure animate-box" >
+					<video width="600px" height="400px" controls="controls" preload="none" onclick="this.play()">
+						<source src="video.webm" type="video/webm">
+					</video>
+				</div>
 				<div class="fh5co-portfolio-description">
 					<h2>Pseudo Code</h2>
 					<p>Complexity Analysis
