added tree and new example

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container" >
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2" >
-						<img style="width="500" height="500"" alt="" src="images/ed.png" />
+						<img style="width="500" height="500" alt="" src="images/ed.png" />
 						<!-- <h1 class="intro-lead">Edit Distance Explaination</h1> -->
 						<!-- <p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
 
@@ -91,8 +91,8 @@ Replace a character </p> -->
 
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/ps.png);   background-size: 700px 400px; !important;
-          "></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/example.png);  background-size: 500px 350px;"></div>
+
 				<div class="fh5co-portfolio-description">
 					<h2>Problem Statement </h2>
 					<p>Given two strings str1 and str2 and below operations that can performed on str1. Find minimum number of edits (operations) required to convert ‘str1’ into ‘str2’.
@@ -131,6 +131,17 @@ Below is implementation of above Naive recursive solution.</p>
 					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 				</div>
 			<!-- </div> -->
+			<div id="fh5co-portfolio">
+				<div class="fh5co-portfolio-item fh5co-img-right">
+					<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/tree.png);  background-size: 500px 350px;"></div>
+					<div class="fh5co-portfolio-description">
+						<h2>Overlapping subproblems</h2>
+						<p>We can see from the right side image that we have to solve 
+							a given problem again and again in case of using a brute force approach. Due to this the time complexity of this brute force approach is exponential. In worst case, we may end up doing O(3^m) operations.</p>
+						<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+					</div>
+				</div>
+	
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/table.png);  background-size: 600px 400px; !important;"></div>
