--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@ All of the above operations are of equal cost.</p>
 </div>
 		<br>
 	</br>
+
+	<div class="fh5co-portfolio-description">
+		<h2>	2 approaches to solve this problem are:</h2>
+		<p style="color:red"  >
+			1) Recursive O(3^n) <br> </p>
+		<p style="color:green">	2) Dynamic programming (tabular approach) O(n²)
+		</p>
+
+		<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+	</div>
+
 			<!-- <div class="fh5co-portfolio-item fh5co-img-right"> -->
 				<!-- <div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);  background-size: 100px 100px; !important;"></div> -->
 				<div class="fh5co-portfolio-description">
