--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-
 <!DOCTYPE html>
 
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>DAA Blog</title>
 
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -41,8 +43,9 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<header id="fh5co-header" role="banner">
 		<nav class="navbar navbar-default" role="navigation">
@@ -50,13 +53,16 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="navbar-header">
-						<!-- Mobile Toggle Menu Button -->
-						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle visible-xs-block" data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-						<a class="navbar-brand" href="index.html">Edit Distance Blog</a>
+							<!-- Mobile Toggle Menu Button -->
+							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle visible-xs-block"
+								data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false"
+								aria-controls="navbar"><i></i></a>
+							<a class="navbar-brand" href="index.html">Edit Distance Blog</a>
 						</div>
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
+								<li class="active"><a href="index.html"><span>Home <span
+												class="border"></span></span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -68,15 +74,15 @@
 
 
 	<!-- <div id="fh5co-main"  > -->
-		<!-- style="background-image: url(images/ed.png); background-size: 800px 400px; !important; background-repeat: no-repeat; background-attachment: fixed; height: 1000px;
+	<!-- style="background-image: url(images/ed.png); background-size: 800px 400px; !important; background-repeat: no-repeat; background-attachment: fixed; height: 1000px;
 	  background-position: 50% 50%;" -->
-		<div class="fh5co-intro text-center">
-			<div class="container" >
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2" >
-						<img style="width="500" height="500" alt="" src="images/ed.png" />
-						<!-- <h1 class="intro-lead">Edit Distance Explaination</h1> -->
-						<!-- <p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
+	<div class="fh5co-intro text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<img style="width = 500 height= 500" alt="" src="images/ed.png" />
+					<!-- <h1 class="intro-lead">Edit Distance Explaination</h1> -->
+					<!-- <p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
 
 You have the following three operations permitted on a word:
 
@@ -84,155 +90,201 @@ Insert a character
 Delete a character
 Replace a character </p> -->
 
-					</div>
 				</div>
 			</div>
+		</div>
 		<!-- </div> -->
 
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/example.png);  background-size: 500px 350px;"></div>
+				<div class="fh5co-portfolio-figure animate-box"
+					style="background-image: url(images/example.png);  background-size: 500px 350px;"></div>
 
 				<div class="fh5co-portfolio-description">
 					<h2>Problem Statement </h2>
-					<p>Given two strings str1 and str2 and below operations that can performed on str1. Find minimum number of edits (operations) required to convert ‘str1’ into ‘str2’.
+					<p>Given two strings str1 and str2 and below operations that can performed on str1. Find minimum
+						number of edits (operations) required to convert ‘str1’ into ‘str2’.
 
-Insert
-Remove
-Replace
-All of the above operations are of equal cost.</p>
+						Insert
+						Remove
+						Replace
+						All of the above operations are of equal cost.</p>
 					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 				</div>
 			</div>
 			<div style="margin-top:5px">
 
-</div>
-<div style="margin-top:5px">
-.
-</div>
-		<br>
-	</br>
-			<!-- <div class="fh5co-portfolio-item fh5co-img-right"> -->
+			</div>
+			<div class="fh5co-portfolio-description">
+				<h2>What are the subproblems in this case? </h2>
+				<p>
+					The idea is to process all characters one by one starting from either from left or right sides of
+					both strings.
+					Let us traverse from right corner, there are two possibilities for every pair of character being
+					traversed.
+
+					m: Length of str1 (first string)
+					n: Length of str2 (second string)
+					If last characters of two strings are same, nothing much to do. Ignore last characters and get count
+					for remaining strings. So we recur for lengths m-1 and n-1.
+					Else (If last characters are not same), we consider all operations on ‘str1’, consider all three
+					operations on last character of first string, recursively compute minimum cost for all three
+					operations and take minimum of three values.
+					Insert: Recur for m and n-1
+					Remove: Recur for m-1 and n
+					Replace: Recur for m-1 and n-1
+					Below is implementation of above Naive recursive solution.</p>
+				<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+			</div>
+			<!-- </div> -->
+			<div id="fh5co-portfolio">
+				<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py"
+					type="text/javascript"></script>
+			</div>
+			<div id="fh5co-portfolio">
+				<!-- <div class="fh5co-portfolio-item fh5co-img-right"> -->
 				<!-- <div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);  background-size: 100px 100px; !important;"></div> -->
 				<div class="fh5co-portfolio-description">
 					<h2>What are the subproblems in this case? </h2>
 					<p>
-The idea is to process all characters one by one starting from either from left or right sides of both strings.
-Let us traverse from right corner, there are two possibilities for every pair of character being traversed.
+						The idea is to process all characters one by one starting from either from left or right sides
+						of both strings.
+						Let us traverse from right corner, there are two possibilities for every pair of character being
+						traversed.
 
-m: Length of str1 (first string)
-n: Length of str2 (second string)
-If last characters of two strings are same, nothing much to do. Ignore last characters and get count for remaining strings. So we recur for lengths m-1 and n-1.
-Else (If last characters are not same), we consider all operations on ‘str1’, consider all three operations on last character of first string, recursively compute minimum cost for all three operations and take minimum of three values.
-Insert: Recur for m and n-1
-Remove: Recur for m-1 and n
-Replace: Recur for m-1 and n-1
-Below is implementation of above Naive recursive solution.</p>
+						m: Length of str1 (first string)
+						n: Length of str2 (second string)
+						If last characters of two strings are same, nothing much to do. Ignore last characters and get
+						count for remaining strings. So we recur for lengths m-1 and n-1.
+						Else (If last characters are not same), we consider all operations on ‘str1’, consider all three
+						operations on last character of first string, recursively compute minimum cost for all three
+						operations and take minimum of three values.
+						Insert: Recur for m and n-1
+						Remove: Recur for m-1 and n
+						Replace: Recur for m-1 and n-1
+						Below is implementation of above Naive recursive solution.</p>
 					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 				</div>
-			<!-- </div> -->
-			<div id="fh5co-portfolio">
-				<div class="fh5co-portfolio-item fh5co-img-right">
-					<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/tree.png);  background-size: 500px 350px;"></div>
-					<div class="fh5co-portfolio-description">
-						<h2>Overlapping subproblems</h2>
-						<p>We can see from the right side image that we have to solve 
-							a given problem again and again in case of using a brute force approach. Due to this the time complexity of this brute force approach is exponential. In worst case, we may end up doing O(3^m) operations.</p>
-						<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+				<!-- </div> -->
+				<div id="fh5co-portfolio">
+					<div class="fh5co-portfolio-item fh5co-img-right">
+						<div class="fh5co-portfolio-figure animate-box"
+							style="background-image: url(images/tree.png);  background-size: 500px 350px;"></div>
+						<div class="fh5co-portfolio-description">
+							<h2>Overlapping subproblems</h2>
+							<p>We can see from the right side image that we have to solve
+								a given problem again and again in case of using a brute force approach. Due to this the
+								time complexity of this brute force approach is exponential. In worst case, we may end
+								up doing O(3^m) operations.</p>
+							<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+						</div>
 					</div>
-				</div>
-	
-		<div id="fh5co-portfolio">
-			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/table.png);  background-size: 600px 400px; !important;"></div>
-				<div class="fh5co-portfolio-description">
-					<h2>Tabulation Approach</h2>
-					<p>Tabulation is the most optimized solution and works in a bottom-up approach, it comes after we have done memoization. Since it is quite clear that this problem has dependencies on smaller problems discussed in the above section.
-						So, Before calculating f(i,j) where f is the editDistance function and i, j are the respective indices pointer on the two strings, it would be good if we calculate f(i, j-1), f(i-1, j) and f(i-1, j-1). Refer to the below structure</p>
-					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
-				</div>
-			</div>
 
-			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" >
-					<video width="600px" height="400px" controls="controls" preload="none" onclick="this.play()">
-						<source src="video.webm" type="video/webm">
-					</video>
-				</div>
-				<div class="fh5co-portfolio-description">
-					<h2>Pseudo Code</h2>
-					<p>Complexity Analysis
-						<br>
-
-Time Complexity: O(n²) <br>
-</br>
-
-Space Complexity: O(n²).</p>
-					<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
-				</div>
-			</div>
-
-			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
-				<div class="fh5co-portfolio-description">
-					<h2>Project Fourth</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
-				</div>
-			</div>
-		</div>
-
-		<div class="fh5co-portfolio-description">
-			<h2 style ="text-align: center;">Our Code</h2>
-		</div>
-<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py" type="text/javascript"></script>
-		<div id="fh5co-team">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<div class="row">
-							<h2 class="section-lead text-center">Blog Create by</h2>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								<figure>
-								<img src="images/user.jpg"  class="img-responsive">
-								</figure>
-								<h3>Aditi Dekatey</h3>
-								<p>B015 </p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul>
+					<div id="fh5co-portfolio">
+						<div class="fh5co-portfolio-item fh5co-img-right">
+							<div class="fh5co-portfolio-figure animate-box"
+								style="background-image: url(images/table.png);  background-size: 600px 400px; !important;">
 							</div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								<figure>
-								<img src="images/user_2.jpg" class="img-responsive">
-								</figure>
-								<h3>Ayush Mundra</h3>
-								<p>B032 </p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul>
+							<div class="fh5co-portfolio-description">
+								<h2>Tabulation Approach</h2>
+								<p>Tabulation is the most optimized solution and works in a bottom-up approach, it comes
+									after we have done memoization. Since it is quite clear that this problem has
+									dependencies on smaller problems discussed in the above section.
+									So, Before calculating f(i,j) where f is the editDistance function and i, j are the
+									respective indices pointer on the two strings, it would be good if we calculate f(i,
+									j-1), f(i-1, j) and f(i-1, j-1). Refer to the below structure</p>
+								<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 							</div>
-							<div class="clearfix visible-sm-block visible-xs-block"></div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								<figure>
-								<img src="images/user_3.jpg"  class="img-responsive">
-								</figure>
-								<h3>Jagrit Acharya</h3>
-								<p>B001</p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul>
+						</div>
+
+						<div class="fh5co-portfolio-item ">
+							<div class="fh5co-portfolio-figure animate-box">
+								<video width="600px" height="400px" controls="controls" preload="none"
+									onclick="this.play()">
+									<source src="video.webm" type="video/webm">
+								</video>
+							</div>
+							<div class="fh5co-portfolio-description">
+								<h2>Pseudo Code</h2>
+								<p>Complexity Analysis
+									<br>
+
+									Time Complexity: O(n²) <br>
+									</br>
+
+									Space Complexity: O(n²).
+								</p>
+								<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
+							</div>
+						</div>
+
+						<div class="fh5co-portfolio-item fh5co-img-right">
+							<div class="fh5co-portfolio-figure animate-box"
+								style="background-image: url(images/work_4.jpg);"></div>
+							<div class="fh5co-portfolio-description">
+								<h2>Project Fourth</h2>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and
+									Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right
+									at the coast of the Semantics, a large language ocean. A small river named Duden
+									flows by their place and supplies it with the necessary regelialia.</p>
+								<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
 
-		<!-- <div id="fh5co-services">
+					<div class="fh5co-portfolio-description">
+						<h2 style="text-align: center;">Our Code</h2>
+					</div>
+					<script
+						src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py"
+						type="text/javascript"></script>
+					<div id="fh5co-team">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-10 col-md-offset-1">
+									<div class="row">
+										<h2 class="section-lead text-center">Blog Create by</h2>
+										<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
+											<figure>
+												<img src="images/user.jpg" class="img-responsive">
+											</figure>
+											<h3>Aditi Dekatey</h3>
+											<p>B015 </p>
+											<ul class="fh5co-social">
+												<li><a href="#"><i class="icon-twitter"></i></a></li>
+												<li><a href="#"><i class="icon-github"></i></a></li>
+											</ul>
+										</div>
+										<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
+											<figure>
+												<img src="images/user_2.jpg" class="img-responsive">
+											</figure>
+											<h3>Ayush Mundra</h3>
+											<p>B032 </p>
+											<ul class="fh5co-social">
+												<li><a href="#"><i class="icon-twitter"></i></a></li>
+												<li><a href="#"><i class="icon-github"></i></a></li>
+											</ul>
+										</div>
+										<div class="clearfix visible-sm-block visible-xs-block"></div>
+										<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
+											<figure>
+												<img src="images/user_3.jpg" class="img-responsive">
+											</figure>
+											<h3>Jagrit Acharya</h3>
+											<p>B001</p>
+											<ul class="fh5co-social">
+												<li><a href="#"><i class="icon-twitter"></i></a></li>
+												<li><a href="#"><i class="icon-github"></i></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- <div id="fh5co-services">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
@@ -292,28 +344,29 @@ Space Complexity: O(n²).</p>
 
 	</div> -->
 
-	<footer id="fh5co-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 col-md-offset-1 text-center">
-					<p>&copy; Blog  Created by:Aditi, Ayush, Jagrit</a></p>
-				</div>
-			</div>
-		</div>
-	</footer>
+					<footer id="fh5co-footer">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-10 col-md-offset-1 text-center">
+									<p>&copy; Blog Created by:Aditi, Ayush, Jagrit</a></p>
+								</div>
+							</div>
+						</div>
+					</footer>
 
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Main JS -->
-	<script src="js/main.js"></script>
+					<!-- jQuery -->
+					<script src="js/jquery.min.js"></script>
+					<!-- jQuery Easing -->
+					<script src="js/jquery.easing.1.3.js"></script>
+					<!-- Bootstrap -->
+					<script src="js/bootstrap.min.js"></script>
+					<!-- Waypoints -->
+					<script src="js/jquery.waypoints.min.js"></script>
+					<!-- Main JS -->
+					<script src="js/main.js"></script>
 
 
-	</body>
+</body>
+
 </html>
