--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Below is implementation of above Naive recursive solution.</p>
 				</div>
 			</div>
 
+
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" >
 					<video width="600px" height="400px" controls="controls" preload="none" onclick="this.play()">
@@ -160,11 +161,11 @@ Below is implementation of above Naive recursive solution.</p>
 					</video>
 				</div>
 				<div class="fh5co-portfolio-description">
-					<h2>Pseudo Code</h2>
+					<h2>Step-by-Step Video Explanation</h2>
 					<p>Complexity Analysis
 						<br>
 
-Time Complexity: O(n²) <br>
+Time Complexity: O(n²)
 </br>
 
 Space Complexity: O(n²).</p>
@@ -172,20 +173,51 @@ Space Complexity: O(n²).</p>
 				</div>
 			</div>
 
-			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
-				<div class="fh5co-portfolio-description">
-					<h2>Project Fourth</h2>
+
+			<!-- <script src="https://gist.github.com/JAgrit20/93df7eb0601006855b5f8acac979b992.js?file=edit_distance_recursion.py" type="text/javascript"></script> -->
+
+			<!-- <div class="fh5co-portfolio-item fh5co-img-right"> -->
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/comp.png); width="96" height="65"" ></div>
+				<!-- <div class="fh5co-portfolio-description">
+					<h2>Comparison</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
 		<div class="fh5co-portfolio-description">
-			<h2 style ="text-align: center;">Our Code</h2>
+			<h2 style ="text-align: center;">Recursive Code</h2>
 		</div>
-<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py" type="text/javascript"></script>
+		<script src="https://gist.github.com/JAgrit20/93df7eb0601006855b5f8acac979b992.js?file=edit_distance_recursion.py" type="text/javascript"></script>
+
+
+		<div class="fh5co-portfolio-description">
+			<h2 style ="text-align: center;">DP Code</h2>
+		</div>
+				<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py" type="text/javascript"></script>
+
+
+				<div class="fh5co-intro text-center">
+					<div class="fh5co-portfolio-description">
+						<h2 style ="text-align: center;">Comparison Analysis</h2>
+					</div>
+					<div class="container" >
+						<div class="row">
+							<div class="col-md-8 col-md-offset-2" >
+								<img style="width=700 px; height="400" " alt="" src="images/comp.png" />
+								<!-- <h1 class="intro-lead">Edit Distance Explaination</h1> -->
+								<!-- <p>Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.
+
+		You have the following three operations permitted on a word:
+
+		Insert a character
+		Delete a character
+		Replace a character </p> -->
+
+							</div>
+						</div>
+					</div>
 		<div id="fh5co-team">
 			<div class="container">
 				<div class="row">
