added recurice code

--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@ Replace a character </p> -->
 				<!-- <p><a href="#" class="btn btn-primary">Read the casetudy</a></p> -->
 			</div>
 			<!-- </div> -->
-			<div id="fh5co-portfolio">
-				<script src="https://gist.github.com/JAgrit20/357e83c1ad918cb47f98de77c99cd7c0.js?file=edit_distance.py"
-					type="text/javascript"></script>
+			<div class="fh5co-portfolio-description">
+				<h2 style="text-align: center;">Our Code</h2>
 			</div>
 			<div id="fh5co-portfolio">
 				<!-- <div class="fh5co-portfolio-item fh5co-img-right"> -->
